--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 .topbar {
-    position:fixed;
+    position:absolute;
     z-index:2;
     color:white;
     display:flex;
@@ -165,6 +165,7 @@
     margin-top:50px;
     filter:opacity(0.7);
     cursor:pointer;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .fa-solid.fa-circle-play {
@@ -174,6 +175,11 @@
     right: 45%;
     font-size:80px;
     cursor:pointer;
+    transition: transform 0.3s ease;
+}
+
+.fa-solid.fa-circle-play:hover {
+    transform: scale(1.1);
 }
 
 .video-container {
@@ -263,3 +269,9 @@ textarea {
     background-color: rgb(3, 3, 184);
 }
 
+.copyright {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
